--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=pruebanegocio
-# Datos de conexión a la base de datos
+
+# Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/negocio
 spring.datasource.username=postgres
 spring.datasource.password=password
 
-# JPA
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
